--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 python3 test_vote_counter.py  
 python3 -m coverage run -m unittest discover .
 python3 -m coverage report -m vote_counter.py 
+
+Los cambios se especifican en los códigos
